welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: not found: value ||
      case 5 || 1 || 2 || 3 || 4  => return "7:00" 
                            ^alarmClock:4: error: not found: value ||
      case 5 || 1 || 2 || 3 || 4  => return "7:00" 
                       ^alarmClock:4: error: not found: value ||
      case 5 || 1 || 2 || 3 || 4  => return "7:00" 
                  ^alarmClock:4: error: not found: value ||
      case 5 || 1 || 2 || 3 || 4  => return "7:00" 
             ^alarmClock:5: error: not found: value ||
      case 6 || 0 => return "10:00"
             ^alarmClock:10: error: not found: value ||
      case 5 || 1 || 2 || 3 || 4  => return "10:00" 
                            ^alarmClock:10: error: not found: value ||
      case 5 || 1 || 2 || 3 || 4  => return "10:00" 
                       ^alarmClock:10: error: not found: value ||
      case 5 || 1 || 2 || 3 || 4  => return "10:00" 
                  ^alarmClock:10: error: not found: value ||
      case 5 || 1 || 2 || 3 || 4  => return "10:00" 
             ^alarmClock:11: error: not found: value ||
      case 6 || 0 => return "off"
             ^